Applied i18n and l10n patch from Jacques Le Roux (OFBIZ-338).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5312 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -591,6 +591,7 @@ ProductNewSegment=New Segment
 ProductNewShipment=New Shipment
 ProductNewShipmentEstimate=New Shipment Estimate
 ProductNewShipmentMethod=New Shipment Method
+ProductNewVirtualProduct=New Virtual Product
 ProductNextShipment=Next Shipment
 ProductNoCategorySpecified=No category specified
 ProductNoChildCategoriesFound=No Child Categories found
@@ -783,6 +784,7 @@ ProductQuantityUomId=Quantity UomId
 ProductQuestion=Question
 ProductQuickAddVariants=Quick Add Variants
 ProductQuickAdmin=Quick Admin
+ProductQuickCreateVirtualFromVariants=Quick Create Virtual from Variants
 ProductQuickShipOrder=Quick Ship Order:
 ProductQuickShipOrderFrom=Quick Ship Order From
 ProductRating=Rating
@@ -830,6 +832,7 @@ ProductReturnToEditProductFeatures=Return to Edit Product Features
 ProductReturnToReceiving=Return to Receiving
 ProductReturnable=Returnable
 ProductReturned=Returned
+ProductReviews=Reviews
 ProductRollup=Rollup
 ProductRollupShort=Rollup
 ProductRollups=Rollups
@@ -938,6 +941,7 @@ ProductText=Text
 ProductTextDataResourceId=Text Data Resource Id
 ProductTheFileOnYourComputer=The file on your computer
 ProductTheUrlOfYourUploadedFile=The URL of  your Uploaded File
+ProductThesaurus=Thesaurus
 ProductThisIsIt=This is it
 ProductThruDateAmountSequenceApplicationType=Thru Date, Amount, Sequence, Application Type
 ProductThruDateTimePrice=Thru Date/Time, Price
