New labels from Jacques Le Roux (Jira issue OFBIZ-346).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5324 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -244,7 +244,9 @@ ProductAttributes=Attributes
 ProductAutoCreateKeywords=AutoCreateKeywords
 ProductAutoCreateKeywordsForAllProducts=Auto Create Keywords for All Products
 ProductAvailable=Available
+ProductAvailableFromDate=Available from date
 ProductAvailablePromiseQuantityHand=Available To Promise / Quantity On Hand
+ProductAvailableThruDate=Available thru date
 ProductAverageCost=Average Cost
 ProductBackToEditCategory=Back to Edit Category
 ProductBase=Base
@@ -436,8 +438,8 @@ ProductFeatureAppls=Feature Appls
 ProductFeatureCategoriesGroups=Feature Categories and Groups
 ProductFeatureCategory=Feature Category
 ProductFeatureCats=Features
-ProductFeatureId=Feature Id
 ProductFeatureGroup=Feature Group
+ProductFeatureId=Feature Id
 ProductFeatureType=Feature Type
 ProductFeatures=Features
 ProductFile=File
@@ -530,6 +532,7 @@ ProductLargeImage=Large Image
 ProductLastModifiedBy=Last Modified By
 ProductLastModifiedByUserLogin=Last Modified By User Login
 ProductLastModifiedDate=Last Modified Date
+ProductLastPrice=Last price
 ProductLatestCancelDate=Latest Cancel Date
 ProductLeaveEntirePoReceiving=Leave empty for entire PO receiving
 ProductLeaveSingleProductReceiving=ProductLeave empty for single product receiving
@@ -560,6 +563,7 @@ ProductMinMax=0 min -> up to max; 0 max -> from min and up
 ProductMinMaxSpan=Min - Max (span)
 ProductMinPurchase=Min Purchase
 ProductMinimumItemPrice=Minimum Item Price
+ProductMinimumOrderQuantity=Minimum order quantity
 ProductMinimumPurchase=Minimum Purchase
 ProductMinimumStock=Minimum Stock
 ProductMinimumStockAndMoveQuantity=Minimum Stock &amp; Move Quantity
@@ -660,6 +664,7 @@ ProductOrderId=Order ID
 ProductOrderItem=Order Item
 ProductOrderItems=Order Items
 ProductOrderNumber=Order Number
+ProductOrderQtyIncrements=Order qty increments
 ProductOrderShipGroupId=Ship Group ID
 ProductOrderedQuantity=Ordered Quantity
 ProductOrigin=Origin
@@ -703,6 +708,8 @@ ProductPopulateNewForm=Populate New Form
 ProductPort=Port
 ProductPosition=Position
 ProductPrepareCreate=Prepare Create
+ProductPrependedImageContentPaths=Define the prefix of the content placement file .  Start up by a / and finish without /
+ProductPrependedTemplatePaths=Define the skeleton  of the content placement file .  Start up by a / and finish without /
 ProductPrice=Price
 ProductPriceMaintPermissionError=You do not have permission to maintain price information. ("CATALOG_PRICE_MAINT" needed)
 ProductPriceRuleNameId=Price Rule Name [ID]
@@ -903,6 +910,7 @@ ProductSmallImage=Small Image
 ProductSqFt=SqFt
 ProductSquareFootage=Square Footage
 ProductStandard=Standard
+ProductStandardLeadTimeDays=Standard lead time days
 ProductState=State
 ProductStatus=Status
 ProductStatusId=Status Id
@@ -922,9 +930,13 @@ ProductSubProduct=SubProduct
 ProductSubTitle=Sub-Title
 ProductSubject=Subject
 ProductSubmit=Submit
+ProductSupplierPrefOrderId=Supplier pref order Id
+ProductSupplierProductId=Supplier product Id
+ProductSupplierProductName=Supplier product name
+ProductSupplierRatingTypeId=Product supplier rating type Id
+ProductSupplierSpecificFeatureInformation=Supplier Specific Feature Information
 ProductSuppliers=Suppliers
 ProductSuppliersId=Suppliers Id
-ProductSupplierSpecificFeatureInformation=Supplier Specific Feature Information
 ProductSupportThruDate=Support Thru Date
 ProductTargetProductCategory=Target Product Category
 ProductTargetType=Target Type
@@ -972,6 +984,7 @@ ProductTransferStatus=Transfer Status
 ProductType=Type
 ProductUnitOfMeasure=Unit Of Measure
 ProductUnitOfMeasureId=Unit of Measure ID
+ProductUnitsIncluded=Units Included
 ProductUnknownSerialNumber=unknown, serialNumber
 ProductUnknownSpecifyType=Unknown; specify a type
 ProductUomId=Uom Id
