A ui label for configurations
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5326 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -175,6 +175,7 @@ AccountingPaymentsReceived=Payments received
 AccountingPaymentsSend=Payments send
 AccountingPaymentType=Payment Type
 AccountingPleaseSendPaymentTo=Please Send Payment To:
+AccountingPreference=Organization Accounting Preferences
 AccountingPrefixCard=Prefix on Card
 AccountingProduct=Product
 AccountingProductId=Product Id
