--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -59,6 +59,8 @@ OrderGiftWrapAllItems = Gift Wrap All Items?
 OrderGrandTotal = Grand Total
 OrderImage = Image
 OrderInProgress = In Progress
+OrderInternalNote = Internal Note
+OrderInternalNoteMessage = If yes is selected, this note doesn't appear on the print documents
 OrderInvoices = Invoices
 OrderIsThisGift = Is This a Gift?
 OrderIssuedToShipmentItem = Issued to Shipment Item
@@ -84,6 +86,7 @@ OrderNoRequestFound = No Request Found
 OrderNoReturnFound = No return found.
 OrderNoReturnFoundWithId = No return found with return ID
 OrderNoRolesAssociatedRequest = No Roles Associated With This Customer Request
+OrderNotPrintableNote=Internal Note (Not Printed)
 OrderNotShipped = Not Shipped
 OrderNotUsedForPurchase = Not Used For Purchase Orders
 OrderNotUsedForSales = Not Used For Sales Orders
@@ -155,6 +158,7 @@ OrderOriginFacility = Origin Facility
 OrderPONumber = PO Number
 OrderPaymentOfflineCheckMoney = Offline Payment: Check/Money Order
 OrderPrice = Price
+OrderPrintableNote=Public Note (Printed)
 OrderProductStore = Product Store
 OrderPromotionCouponCodes = Promotion/Coupon Codes
 OrderPurchaseOrder = Purchase Order
