Added patch from Si Chen to show outstanding purchase orders for a product, may still need some polishing but looking pretty good so far; Jira #OFBIZ-355
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5335 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -675,6 +675,7 @@ ProductOriginFacility=Origin Facility
 ProductOriginFacilityIs=Origin Facility is
 ProductOriginPhoneNumberId=Origin Phone Number Id
 ProductOriginPostalAddressId=Origin Postal Address Id
+ProductOutstandingPurchaseOrders=Outstanding Purchase Orders
 ProductOutgoingProductionRuns=Outgoing Production Runs
 ProductOutgoingShipments=Outgoing Shipments
 ProductOverride=Override
