Added some initial example UI stuff for FindExample, EditExample, EditExampleItems; not quite complete, but mostly there
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5357 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/example/config/ExampleUiLabels.properties
+++ b/framework/example/config/ExampleUiLabels.properties
@@ -5,5 +5,12 @@ ExampleApplication=Example Application
 ExampleCompanyName=OFBiz\: Example
 ExampleCompanySubtitle=Part of the Open For Business Family of Open Source Software
 
+ExampleExampleId=Example ID
+
 ExampleErrorNoExampleStatusValidChange=Error\: status change from [${lookedUpValue.statusId}] to [${parameters.statusId}] is not allowed.
 ExamplePermissionError=Security Error\: to run ${methodShortDescription} you must have the EXAMPLE${securityAction} or EXAMPLE_ADMIN permission
+ExampleViewPermissionError=You do not have permission to view this page. ("EXAMPLE_VIEW" or "EXAMPLE_ADMIN" needed)
+
+PageTitleFindExample=Edit Example
+PageTitleEditExample=Edit Example
+PageTitleEditExampleItems=Edit Example Items
