A little more progress on the Example screens, initially somewhat working
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5368 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/example/config/ExampleUiLabels.properties
+++ b/framework/example/config/ExampleUiLabels.properties
@@ -6,11 +6,13 @@ ExampleCompanyName=OFBiz\: Example
 ExampleCompanySubtitle=Part of the Open For Business Family of Open Source Software
 
 ExampleExampleId=Example ID
+ExampleExample=Example
+ExampleNewExample=New Example
 
 ExampleErrorNoExampleStatusValidChange=Error\: status change from [${lookedUpValue.statusId}] to [${parameters.statusId}] is not allowed.
 ExamplePermissionError=Security Error\: to run ${methodShortDescription} you must have the EXAMPLE${securityAction} or EXAMPLE_ADMIN permission
 ExampleViewPermissionError=You do not have permission to view this page. ("EXAMPLE_VIEW" or "EXAMPLE_ADMIN" needed)
 
-PageTitleFindExample=Edit Example
+PageTitleFindExample=Find Example
 PageTitleEditExample=Edit Example
 PageTitleEditExampleItems=Edit Example Items
