--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -174,6 +174,7 @@ CommonInput=Input
 CommonInto=Into
 CommonIntroductionDate=Introduction Date
 CommonItem=Item
+CommonItems=Items
 CommonJanuary=January
 CommonJuly=July
 CommonJune=June
