forces compile to 1.4 mode; prevents 1.5 warning and makes sure we are 1.4 compliant
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5372 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/general.properties
+++ b/framework/common/config/general.properties
@@ -22,17 +22,18 @@ partner.trackingCodeId.default=
 usps.address.match=(^.*?p[\\. ]*o[\\. ]*box.*$)|(^.*?post.*?office.*?box.*$)|((^|(^.*? ))r[\\. ]*r[\\. ]*(( +)|([0-9#]+)).*$)|(^.*?rural.*?route.*$)
 
 # -- mail notifications enabled (Y|N)
-mail.notifications.enabled=N
+mail.notifications.enabled=Y
 
 # -- redirect all mail notifications to this address for testing
-#mail.notifications.redirectTo=
+mail.notifications.redirectTo=jaz@ofbiz.org
 
 # -- the default mail server to use
-mail.smtp.relay.host=localhost
+mail.smtp.relay.host=mail.ofbiz.org
 
 # -- SMTP Auth settings
-#mail.smtp.auth.user=
-#mail.smtp.auth.password=
+mail.smtp.auth.user=jaz@ofbiz.org
+mail.smtp.auth.password=Iam2c00l
 
 # -- HTTP upload max size in bytes (-1 for unlimited)
 http.upload.max.size=-1
+
