--- a/framework/workflow/build.xml
+++ b/framework/workflow/build.xml
@@ -43,7 +43,7 @@
     <target name="classpath">
         <path id="local.class.path">
             <!--<fileset dir="${lib.dir}" includes="*.jar"/>-->
-            <fileset dir="../../base/lib" includes="*.jar"/>            
+            <fileset dir="../../base/lib" includes="*.jar"/>
             <fileset dir="../../base/lib/scripting" includes="*.jar"/>
             <fileset dir="../../base/build/lib" includes="*.jar"/>
             <fileset dir="../minerva/lib" includes="*.jar"/>
@@ -84,7 +84,7 @@
     <!-- ================================================================== -->
 
     <target name="classes" depends="prepare,classpath">
-        <javac debug="on" deprecation="on" destdir="${build.dir}/classes">
+        <javac debug="on" source="1.4" deprecation="on" destdir="${build.dir}/classes">
             <classpath>
                 <path refid="local.class.path"/>
             </classpath>
