--- a/framework/shark/build.xml
+++ b/framework/shark/build.xml
@@ -87,7 +87,7 @@
     <!-- ================================================================== -->
 
     <target name="classes" depends="prepare,classpath">
-    	<javac debug="on" deprecation="on" destdir="${build.dir}/classes">
+    	<javac debug="on" source="1.4" deprecation="on" destdir="${build.dir}/classes">
             <classpath>
                 <path refid="local.class.path"/>
             </classpath>
