forces compile to 1.4 mode; prevents 1.5 warning and makes sure we are 1.4 compliant
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5374 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/build.xml
+++ b/applications/product/build.xml
@@ -101,7 +101,7 @@
             </not>
         </condition>
 
-    	<javac debug="on" deprecation="on" destdir="${build.dir}/classes">
+    	<javac debug="on" source="1.4" deprecation="on" destdir="${build.dir}/classes">
             <classpath>
                 <path refid="local.class.path"/>
             </classpath>
