--- a/applications/securityext/build.xml
+++ b/applications/securityext/build.xml
@@ -89,13 +89,13 @@
     <!-- ================================================================== -->
 
     <target name="classes" depends="prepare,classpath">
-        <javac debug="on" deprecation="on" destdir="${build.dir}/classes">
+        <javac debug="on" source="1.4" deprecation="on" destdir="${build.dir}/classes">
             <classpath>
                 <path refid="local.class.path"/>
             </classpath>
             <src path="${src.dir}"/>
             <!-- exclude the Truition; comment if you have libs -->
-            <exclude name="org/ofbiz/securityext/thirdparty/truition/**"/>            
+            <exclude name="org/ofbiz/securityext/thirdparty/truition/**"/>
         </javac>
         <!-- also put the DTDs in the jar file... -->
         <copy todir="${build.dir}/classes">
