--- a/applications/accounting/build.xml
+++ b/applications/accounting/build.xml
@@ -95,13 +95,14 @@
     <!-- ================================================================== -->
 
     <target name="classes" depends="prepare,classpath">
-    	<javac debug="on" deprecation="on" destdir="${build.dir}/classes">
+    	<javac debug="on" source="1.4" deprecation="on" destdir="${build.dir}/classes">
             <classpath>
                 <path refid="local.class.path"/>
             </classpath>
             <src path="${src.dir}"/>
-            <!-- exclude the payment processor packages; comment if you have libs -->
+            <!-- exclude the payment processor packages; comment if you have libs
             <exclude name="org/ofbiz/accounting/thirdparty/verisign/**"/>
+            -->
         </javac>
         <!-- also put the DTDs in the jar file... -->
         <copy todir="${build.dir}/classes">
