--- a/applications/pos/build.xml
+++ b/applications/pos/build.xml
@@ -30,17 +30,17 @@
     <!-- Initialization of all property settings                            -->
     <!-- ================================================================== -->
 
-    <target name="init">                
+    <target name="init">
         <property environment="env"/>
         <property name="desc" value="POS Component"/>
         <property name="name" value="ofbiz-pos"/>
         <property name="src.dir" value="src"/>
         <property name="dtd.dir" value="dtd"/>
-        <property name="lib.dir" value="lib"/>        
-        <property name="build.dir" value="build"/>        
+        <property name="lib.dir" value="lib"/>
+        <property name="build.dir" value="build"/>
     </target>
 
-    <target name="classpath">		        
+    <target name="classpath">
         <path id="local.class.path">
             <fileset dir="${lib.dir}" includes="*.jar"/>
             <fileset dir="../../base/lib" includes="*.jar"/>
@@ -61,40 +61,40 @@
             <fileset dir="../accounting/build/lib" includes="*.jar"/>
         </path>
     </target>
-    
+
     <!-- ================================================================== -->
     <!-- Removes all created files and directories                          -->
     <!-- ================================================================== -->
 
     <target name="clean" depends="clean-lib">
-        <delete dir="${build.dir}"/>               
+        <delete dir="${build.dir}"/>
     </target>
 
     <target name="clean-lib" depends="init">
         <delete dir="${build.dir}/lib"/>
     </target>
-    
+
     <!-- ================================================================== -->
     <!-- Makes sure the needed directory structure is in place              -->
     <!-- ================================================================== -->
 
     <target name="prepare" depends="clean-lib">
-        <mkdir dir="${build.dir}/classes"/>         
+        <mkdir dir="${build.dir}/classes"/>
         <mkdir dir="${build.dir}/lib"/>
     </target>
-    
+
     <target name="prepare-docs" depends="init">
-        <mkdir dir="${build.dir}/javadocs"/>        
+        <mkdir dir="${build.dir}/javadocs"/>
     </target>
-    
+
     <!-- ================================================================== -->
     <!-- Compilation of the source files                                                                                                                         -->
-    <!-- ================================================================== -->               
+    <!-- ================================================================== -->
 
     <target name="classes" depends="prepare,classpath">
-    	<javac debug="on" deprecation="on" destdir="${build.dir}/classes">
+    	<javac debug="on" source="1.4" deprecation="on" destdir="${build.dir}/classes">
             <classpath>
-                <path refid="local.class.path"/>                
+                <path refid="local.class.path"/>
             </classpath>
             <src path="${src.dir}"/>
         </javac>
@@ -102,23 +102,23 @@
             <fileset dir="${src.dir}" includes="**/*.properties,**/*.xml,**/*.bsh,**/*.logic,**/*.js,**/*.jacl,**/*.py"/>
         </copy>
     </target>
-    
+
     <target name="jar" depends="classes">
-        <jar jarfile="${build.dir}/lib/${name}.jar" basedir="${build.dir}/classes"/>         
-    </target>    
-    
+        <jar jarfile="${build.dir}/lib/${name}.jar" basedir="${build.dir}/classes"/>
+    </target>
+
     <!-- ================================================================== -->
     <!-- Build JavaDoc                                                      -->
     <!-- ================================================================== -->
 
     <target name="docs" depends="prepare-docs,classpath">
-        <javadoc packagenames="org.ofbiz.pos.*" 
+        <javadoc packagenames="org.ofbiz.pos.*"
                  classpathref="local.class.path"
-                 destdir="${build.dir}/javadocs" 
+                 destdir="${build.dir}/javadocs"
                  Windowtitle="Open for Business - ${desc}">
-            <sourcepath path="${src.dir}"/>            
+            <sourcepath path="${src.dir}"/>
         </javadoc>
     </target>
-    
-    <target name="all" depends="jar,docs"/>   
+
+    <target name="all" depends="jar,docs"/>
 </project>
