Added the verisign exclude back in; won't compile without this excluded
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5379 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/build.xml
+++ b/applications/accounting/build.xml
@@ -100,9 +100,8 @@
                 <path refid="local.class.path"/>
             </classpath>
             <src path="${src.dir}"/>
-            <!-- exclude the payment processor packages; comment if you have libs
+            <!-- exclude the payment processor packages; comment this out to not exclude if you have libs -->
             <exclude name="org/ofbiz/accounting/thirdparty/verisign/**"/>
-            -->
         </javac>
         <!-- also put the DTDs in the jar file... -->
         <copy todir="${build.dir}/classes">
