Added patch from Si Chen for DHL shipping implementation; Jira #OFBIZ-353
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5380 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -311,6 +311,7 @@ ProductConfigOptions=Config Options
 ProductConfigs=Configurations
 ProductConfirmSelectedMoves=Confirm selected moves
 ProductConfirmShipmentUps=Confirm Shipment with UPS
+ProductConfirmShipmentDHL=Confirm Shipment with DHL
 ProductContactTypeInformation=Contact Type Information
 ProductContainerLetter=C
 ProductContent=Content
