--- a/applications/product/config/shipment.properties
+++ b/applications/product/config/shipment.properties
@@ -7,6 +7,7 @@
 # General Configuration
 ############################################
 shipment.default.weight.uom=WT_lb
+shipment.default.weight.value=1
 
 ############################################
 # UPS XPCI Configuration
@@ -66,3 +67,29 @@ shipment.usps.access.password=999999999999
 # Estimate split into packages
 shipment.usps.max.estimate.weight=70
 
+############################################
+# DHL XPCI Configuration
+############################################
+
+# DHL API Schema Templates
+shipment.template.dhl.rate.estimate=api.schema.DHL
+
+# DHL Connection URL & timeout in seconds
+## Use this one for testing.  Change it to the production URL.
+shipment.dhl.connect.url=HTTPS://eCommerce.airborne.com/ApiLandingTest.asp
+## This is the production URL
+#shipment.dhl.connect.url=HTTPS://eCommerce.airborne.com/ApiLanding.asp
+shipment.dhl.connect.timeout=60
+
+# DHL Head Attributes
+shipment.dhl.head.version=1.1
+shipment.dhl.head.action=Request
+
+# DHL Credentials
+shipment.dhl.access.userid=Your DHL ShipIT userid
+shipment.dhl.access.password=Your DHL ShipIT password
+shipment.dhl.access.accountNbr=Your DHL account number
+shipment.dhl.access.shippingKey=Shipping Key from DHL ShipIT, obtained with the dhlRegisterAccount (services_shipment_dhl.xml) service 
+
+# DHL Shipment Label configuration
+shipment.dhl.label.image.format=PNG
