A number of segment enhancements, including new screens in the party profile and product store areas
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5385 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -68,6 +68,7 @@ PageTitleSecurityGroupsList=Security Groups List
 PageTitleShoppingList=Shopping List
 PageTitleViewPartyProfile=View Party Profile
 PageTitleViewPartyRole=View Party Roles
+PageTitleViewPartySegmentRoles=View Party Segment Roles
 PageTitleViewVendorParty=View Vendor Party Info
 PageTitleVisitDetail=Visit Detail
 PageTitleVisitList=Visit List
@@ -284,6 +285,11 @@ PartySecurityGroups=Security Groups
 PartySecurityGroupId=Security Group ID
 PartySecurityGroupsList=SecurityGroups List
 PartySecurityViewPermissionError=PartySecurityViewPermissionError You do not have permission to view this page. ("SECURITY_VIEW" or "SECURITY_ADMIN" needed)
+PartySegmentGroupId= Segment Id
+PartySegmentGroupTypeId= Segment Type Id
+PartySegmentGroupDescription=Description
+PartySegmentGroupProductStoreId= Product Store Id
+PartySegmentRoles=Segment Roles
 PartySelectContactType=Select Contact Type
 PartySelectcRoleForParty=Select role(s) for this party
 PartySequenceId=Sequence Id 
@@ -334,6 +340,7 @@ PartyUserNameMissing=Username is missing
 PartyVendor=Vendor
 PartyVendorInformation=Vendor Information
 PartyViewPostalAddressBoundaryPermissionError=Security Error\: to run getPostalAddressBoundary you must have the PARTY_VIEW or PARTY_ADMIN permission
+PartyViewSegmentRoles=View Party Segment Roles
 PartyVisits=Visits
 PartyVisitDetail=Visit Detail
 PartyVisitId=Visit Id
