--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -118,6 +118,7 @@ PageTitleFindProductCatalog=Find Product Catalog
 PageTitleFindProductPriceRule=Find Product Price Rule
 PageTitleFindProductPromos=Find Product Promos
 PageTitleFindProductPromotionCode=Find Product Promotion Code
+PageTitleViewProductStoreSegments=View Product Store Segments
 PageTitleLogin=Login
 PageTitleMain=Main Page
 PageTitlePickList=Pick List
@@ -862,6 +863,10 @@ ProductSearchProducts=Search Products
 ProductSearchinCategory=Search in Category
 ProductSection=Section
 ProductSegment=Segment
+ProductSegmentGroupId=Segment Id
+ProductSegmentGroupTypeId=Type Id
+ProductSegmentGroupDescription=Description
+ProductSegments=Segments
 ProductSelectAll=Select all
 ProductSelectCategory=Select Category
 ProductSelectFacility=Select a Facility
