New feature to set a Purchase Order to ship to a different party's address, Jira #OFBIZ-363
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5394 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -207,6 +207,7 @@ OrderShipAfterDate = Ship After Date
 OrderShipBeforeDate = Ship Before Date
 OrderShipGroup = Ship Group
 OrderShipmentInformation = Shipment Information
+OrderShipToAnotherParty=Ship to Another Party
 OrderShowAllNotes = Show All Notes
 OrderShowThisItemsNotes = Show This Item's Notes
 OrderSplittingPreference = Splitting Preference
