Applied patch and new files from Al Byers with segment group and party classification administration user interfaces and such
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5405 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -26,7 +26,13 @@ SegmentGroupSegmentGroupClassification=Classification
 SegmentGroupSegmentGroupRole=Role
 SegmentGroupSegmentGroupGeo=Geo
 SegmentGroupSegmentGroupLookup=Find
-CommonDelete=Delete
+SegmentGroupNoSegmentGroupFoundWithId=No SegmentGroup found with ID:
+SegmentGroupGeoId=Geo ID
+SegmentGroupGeoTypeId=Geo Type ID
+SegmentGroupGeoName=Name
+SegmentGroupGeoCode=Code
+SegmentGroupGeoSecCode=Secondary Code
+SegmentGroupGeoAbbr=Abbreviation
 
 
 
