--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -40,6 +40,8 @@ contactmechservices.could_not_delete_purpose_from_contact_mechanism_not_found=Co
 contactmechservices.could_not_delete_purpose_from_contact_mechanism_read=Could not delete purpose from contact mechanism (read failure): ${errMessage}.
 contactmechservices.could_not_delete_purpose_from_contact_mechanism_write=Could not delete purpose from contact mechanism (write failure): ${errMessage}.
 
+Description=Description
+
 OrderNewOrder=New Order
 OrderOrders=Orders
 PageTitleCreateNewPartyDetail=Create New Party Detail
@@ -50,6 +52,8 @@ PageTitleEditCreditCard=Edit Credit Card
 PageTitleEditEftAccount=Edit EFT Account
 PageTitleEditGiftCard=Edit Gift Card
 PageTitleEditGroupInformation=Edit Group Information
+PageTitleEditPartyClassificationGroup=Edit Party Classification Group
+PageTitleEditPartyClassificationGroupParties=Edit Classification Group Parties
 PageTitleEditPartyRelationships=Edit Party Relationships
 PageTitleEditPartyTaxInfos=Edit Party Tax Info
 PageTitleEditPersonalInformation=Edit Personal Information
@@ -58,6 +62,7 @@ PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
 PageTitleEditSecurityGroupUserLogins=Edit Security Group UserLogins
 PageTitleEditUserLoginSecurityGroups=Edit UserLogin Security Groups
 PageTitleFindParty=Find Party(s)
+PageTitleFindPartyClassificationGroups=Find Party Classification Groups
 PageTitleFindSecurityGroup=Find Security Group
 PageTitleListCommunications=List Communications
 PageTitleLogin=Login
@@ -66,6 +71,7 @@ PageTitleNewPartyNote=New Party Note
 PageTitlePendingCommunications=Pending Communications
 PageTitleSecurityGroupsList=Security Groups List
 PageTitleShoppingList=Shopping List
+PageTitleViewPartyClassifications=View Party Classifications
 PageTitleViewPartyProfile=View Party Profile
 PageTitleViewPartyRole=View Party Roles
 PageTitleViewPartySegmentRoles=View Party Segment Roles
@@ -73,6 +79,8 @@ PageTitleViewVendorParty=View Vendor Party Info
 PageTitleVisitDetail=Visit Detail
 PageTitleVisitList=Visit List
 
+ParentGroupId=Parent Id
+Parties=Parties
 PartyAccount=Account
 PartyActive=Active
 PartyAddChildListsToCart=Add Child List To Cart
@@ -103,6 +111,11 @@ PartyCannotUpdateContactBecauseNotWithSpecifiedParty=ERROR: Cannot update specif
 PartyChangeParty=Change Party
 PartyCity=City
 PartyCityMissing=City is missing
+PartyClassifications=Classifications
+PartyClassificationGroupId=Classification Group Id 
+PartyClassificationGroups=Classification Groups 
+PartyClassificationGroup=Classification Group 
+PartyClassificationGroupParties=Classification Group Parties
 PartyClient=Client
 PartyClientIP=Client IP
 PartyClientUser=Client User 
@@ -137,6 +150,7 @@ PartyCreatePartyClassificationGroupPermissionError=Security Error\: to run creat
 PartyCreatePartyClassificationPermissionError=Security Error\: to run createPartyClassification you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreatePostalAddressBoundaryPermissionError=Security Error\: to run createPostalAddressBoundary you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateVendorPermissionError=Security Error\: to run createVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreateNewPartyClassificationGroup=Create New Party Classification Group
 PartyCreateNewContact=Create New Contact Information
 PartyCreateNewCustomer=Create Customer
 PartyCreateNewEmployee=Create Employee
@@ -247,6 +261,8 @@ PartyPaymentMethodInformation=Payment Method Information
 PartyPermissionSecurityGroupWithId=Permissions for SecurityGroup with ID
 PartyPermission=Permission
 PartyPermissionErrorForThisParty=You do not have permission to perform this operation for this party.<br>
+PartyPermissionError=Security Error\: to run ${methodShortDescription} you must have the PARTYMGR${securityAction} or PARTYMGR_ADMIN permission
+
 PartyPermissions=Permissions
 PartyPermissionId=Permission ID
 PartyPersonalInformation=Personal Information
