New feature to add contents of order manager cart to a shopping list
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5406 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -18,6 +18,7 @@ OrderAddCode = Add Code
 OrderAddNote = Add Note
 OrderAddToOrder = Add To Order
 OrderAddress = Address
+OrderAddOrderToShoppingList = Add Order Items to Shopping List
 OrderAdjustment = Adjustment
 OrderAdjustments = Adjustments
 OrderAllowSplit = Allow Split
