--- a/applications/ecommerce/webapp/ecommerce/WEB-INF/web.xml
+++ b/applications/ecommerce/webapp/ecommerce/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     <context-param>
         <param-name>webSiteId</param-name>
         <param-value>WebStore</param-value>
-    <description>A unique ID used to look up the WebSite entity to get information about catalogs, etc.</description>
+        <description>A unique ID used to look up the WebSite entity to get information about catalogs, etc.</description>
     </context-param>
     <context-param>
         <param-name>localDispatcherName</param-name>
@@ -47,7 +47,12 @@
         <param-value>default</param-value>
         <description>The Name of the Entity Delegator to use, defined in entityengine.xml</description>
     </context-param>
-
+    <context-param>
+        <param-name>mainDecoratorLocation</param-name>
+        <param-value>component://ecommerce/widget/CommonScreens.xml</param-value>
+        <description>The location of the main-decorator screen to use for this webapp; referred to as a context variable in screen def XML files.</description>
+    </context-param>
+    
     <filter>
         <filter-name>ContextFilter</filter-name>
         <display-name>ContextFilter</display-name>
