UI labels for foreign exchange screens
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5429 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -110,6 +110,7 @@ AccountingFixedAssetTypeId=Asset Type
 AccountingFixedAssets=Fixed Assets
 AccountingFromParty=From Party
 AccountingFromPartyId=From Party ID
+AccountingFX=Foreign Exchange Rates
 AccountingGlAcc=GL Account
 AccountingHideFields=Hide Fields
 AccountingIncomeStatement=Income Statement
@@ -200,8 +201,10 @@ AccountingUpdateBillingAccountPermissionError=Security Error : to run updateAcct
 AccountingUpdateBillingAccountRolePermissionError=Security Error : to run updateBillingAccountRole you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
 AccountingUpdateBillingAccountTermPermissionError=Security Error : to run updateBillingAccountTerm you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
 AccountingUpdateBillingAccount=Update Billing Account
+AccountingUpdateFX=Update Foreign Exchange Rates
 AccountingUpdatePaymentPermissionError=Security Error : To Update a Payment you must either be the to or from party or have the PAY_INFO_UPDATE or PAY_INFO_ADMIN permissions.
 AccountingViewPermissionError=You do not have permission to view this page. ("ACCOUNTING_VIEW" or "ACCOUNTING_ADMIN" needed)
+AccountingFX=Foreign Exchange Rates
 
 CommonAccounting=Accounting
 CommonAttn=Attn
