balance inquire now requires pin
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5434 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/payment.properties
+++ b/applications/accounting/config/payment.properties
@@ -39,6 +39,8 @@ payment.giftcert.reload.survey.cardNumber=giftCardNumber
 # Survey question (description field) which contains the pin number
 payment.giftcert.reload.survey.pinNumber=giftCardPin
 
+# Gift Certificate type (ofbiz || valuelink)
+payment.giftcert.type=ofbiz
 
 ############################################
 # CyberSource Configuration
