New ui label for trial balance
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5444 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -192,6 +192,7 @@ AccountingSuffixCard=Suffix on Card
 AccountingTermTypeId=Term Type Id
 AccountingTextData=Text Data
 AccountingThruDate=Thru Date
+AccountingTrialBalance=Trial Balance
 AccountingToParty=To Party
 AccountingToPartyId=To Party Id
 AccountingTotal=Total
