Added Type label
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5445 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -336,6 +336,7 @@ CommonToday=Today
 CommonToggle=Toggle
 CommonTotal=Total
 CommonTuesday=Tuesday
+CommonType=Type
 CommonUnitPrice=Unit Price
 CommonUntil=Until
 CommonUom=UOM
