New security permission for FX rate entry.  New demo GL accounts for sales tax liabilities.  New payment type for sales tax payment
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5454 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -134,6 +134,7 @@ AccountingMainMenu=Main
 AccountingMainPage=Accounting Manager Main Page
 AccountingMainPageNote=Welcome to the Accounting Manager!
 AccountingManagerApplication=Accounting Manager Application
+AccountingManualJournlEntry=Manual Journal Entry
 AccountingManualTxMenu=Manual Tx
 AccountingMethod=Method
 AccountingMiddleNameCard=Middle Name on Card
