Added new taxAuthGeoId field to PaymentApplication so we can record geo of tax payments and hence post them to the right GL account
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5461 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -56,7 +56,6 @@ AccountingBillingContactMechId=Billing Contact Mech
 AccountingBillingInformation=AccountingBilling Information
 AccountingBillingMenu=Billing Accounts
 AccountingBillUpTo=Bill-Up To
-AccountingBothInvoiceIdBillingAccountIdEmptyError=Both invoiceId and billingAccountId cannot be empty
 AccountingCardNumber=Card Number
 AccountingCardType=Card Type
 AccountingChartOfAcctsMenu=Chart of Accounts
@@ -164,6 +163,7 @@ AccountingPartyIdTo=Party Id To
 AccountingPartyMustBeInternalOrganization=Party must be an Internal Organization (set in PartyRole)
 AccountingPayment=Payment
 AccountingPaymentAlreadyReceived=Payment already received
+AccountingPaymentApplicationParameterMissing=Payment application requires either an invoiceId, a billingAccountId, or a taxGeoId
 AccountingPaymentDate=Payment Date
 AccountingPaymentID=PaymentID
 AccountingPaymentInformation=Payment Information
