--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -133,7 +133,8 @@ AccountingMainMenu=Main
 AccountingMainPage=Accounting Manager Main Page
 AccountingMainPageNote=Welcome to the Accounting Manager!
 AccountingManagerApplication=Accounting Manager Application
-AccountingManualJournlEntry=Manual Journal Entry
+AccountingManualJournalEntry=Manual Journal Entry
+AccountingManualPostTrans=Manual Transactions Posting
 AccountingManualTxMenu=Manual Tx
 AccountingMethod=Method
 AccountingMiddleNameCard=Middle Name on Card
