--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -36,6 +36,10 @@ security.SecurityGroupPermissionCache.expireTime=1800000
 workflow.processmgr.useSoftReference=true
 workflow.client.useSoftReference=true
 
+# product.content.rendered cache settings, set to expire in 5 minutes by default to avoid too much administrative confusion, can comment this out or increase for better performance
+product.content.rendered.expireTime=300000
+product.content.rendered.useSoftReference=true
+
 # Development Mode - comment these out to better cache BSH scripts, etc
 #These are all cleared by default every 10000 milliseconds, or ten seconds
 minilang.SimpleMethodsDirect.expireTime=10000
@@ -58,4 +62,3 @@ widget.tree.webappResource.expireTime=10000
 
 template.ftl.general.expireTime=10000
 template.ftl.location.expireTime=10000
-
