Added ICU to Eclipse .classpath
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5468 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/.classpath
+++ b/.classpath
@@ -157,5 +157,6 @@
 	<classpathentry kind="lib" path="base/lib/avalon-framework-4.1.5.jar"/>
 	<classpathentry kind="lib" path="base/lib/scripting/jython-nooro.jar"/>
 	<classpathentry kind="lib" path="framework/webapp/lib/barcode4j-fop-ext-0.20.5-complete.jar"/>
+	<classpathentry kind="lib" path="base/lib/icu4j_3_4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
